[gd_scene load_steps=4 format=3 uid="uid://dsgnfyvl16pyv"]

[ext_resource type="Script" uid="uid://cld27lncgwmok" path="res://Scripts/button.gd" id="1_p3102"]
[ext_resource type="AudioStream" uid="uid://cnacqddmh1ans" path="res://Assets/Sounds/others/mouse-click.mp3" id="2_a506e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a506e"]
size = Vector2(96, 96)

[node name="Button" type="Area2D"]
script = ExtResource("1_p3102")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.45, 0.45)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_a506e")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a506e")
bus = &"Sound"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
